test/files/neg/t10097b.scala

case class C(implicit val c: Int)

